# serializer version: 1
# name: test_dump_shell_empty_snapshot
  '''
  ADMIN_USERNAME=admin
  INFISICAL_PASS=''
  INFISICAL_ENCRYPTION_KEY=''
  INFISICAL_AUTH_SECRET=''
  INFISICAL_DB_PASSWORD=''
  PORTAINER_PASS=''
  KUMA_PASS=''
  GRAFANA_PASS=''
  DAGSTER_DB_PASS=''
  KESTRA_PASS=''
  KESTRA_DB_PASS=''
  N8N_PASS=''
  METABASE_PASS=''
  SUPERSET_PASS=''
  SUPERSET_DB_PASS=''
  SUPERSET_SECRET=''
  CLOUDBEAVER_PASS=''
  MAGE_PASS=''
  MINIO_ROOT_PASS=''
  SFTPGO_ADMIN_PASS=''
  SFTPGO_USER_PASS=''
  HOPPSCOTCH_DB_PASS=''
  HOPPSCOTCH_JWT=''
  HOPPSCOTCH_SESSION=''
  HOPPSCOTCH_ENCRYPTION=''
  MELTANO_DB_PASS=''
  SODA_DB_PASS=''
  REDPANDA_ADMIN_PASS=''
  POSTGRES_PASS=''
  PG_DUCKLAKE_PASS=''
  HETZNER_S3_BUCKET_PGDUCKLAKE=''
  PGADMIN_PASS=''
  PREFECT_DB_PASS=''
  RUSTFS_ROOT_PASS=''
  SEAWEEDFS_ADMIN_PASS=''
  GARAGE_ADMIN_TOKEN=''
  GARAGE_RPC_SECRET=''
  LAKEFS_DB_PASS=''
  LAKEFS_ENCRYPT_SECRET=''
  LAKEFS_ADMIN_ACCESS_KEY=''
  LAKEFS_ADMIN_SECRET_KEY=''
  HETZNER_S3_SERVER=''
  HETZNER_S3_REGION=''
  HETZNER_S3_ACCESS_KEY=''
  HETZNER_S3_SECRET_KEY=''
  HETZNER_S3_BUCKET=''
  HETZNER_S3_BUCKET_GENERAL=''
  EXTERNAL_S3_ENDPOINT=''
  EXTERNAL_S3_REGION=auto
  EXTERNAL_S3_ACCESS_KEY=''
  EXTERNAL_S3_SECRET_KEY=''
  EXTERNAL_S3_BUCKET=''
  EXTERNAL_S3_LABEL='External Storage'
  R2_DATA_ENDPOINT=''
  R2_DATA_ACCESS_KEY=''
  R2_DATA_SECRET_KEY=''
  R2_DATA_BUCKET=''
  FILESTASH_ADMIN_PASSWORD=''
  WINDMILL_ADMIN_PASS=''
  WINDMILL_DB_PASS=''
  WINDMILL_SUPERADMIN_SECRET=''
  OPENMETADATA_ADMIN_PASS=''
  OPENMETADATA_DB_PASS=''
  OPENMETADATA_AIRFLOW_PASS=''
  OPENMETADATA_FERNET_KEY=''
  GITEA_ADMIN_PASS=''
  GITEA_USER_PASS=''
  GITEA_DB_PASS=''
  CLICKHOUSE_ADMIN_PASS=''
  WIKIJS_ADMIN_PASS=''
  WIKIJS_DB_PASS=''
  WOODPECKER_AGENT_SECRET=''
  NOCODB_ADMIN_PASS=''
  NOCODB_DB_PASS=''
  NOCODB_JWT_SECRET=''
  DINKY_ADMIN_PASS=''
  APPSMITH_ENCRYPTION_PASSWORD=''
  APPSMITH_ENCRYPTION_SALT=''
  DIFY_ADMIN_PASS=''
  DIFY_DB_PASS=''
  DIFY_REDIS_PASS=''
  DIFY_SECRET_KEY=''
  DIFY_WEAVIATE_API_KEY=''
  DIFY_SANDBOX_API_KEY=''
  DIFY_PLUGIN_DAEMON_KEY=''
  DIFY_PLUGIN_INNER_API_KEY=''
  DOCKERHUB_USER=''
  DOCKERHUB_TOKEN=''
  
  '''
# ---
# name: test_dump_shell_full_snapshot
  '''
  ADMIN_USERNAME=nexus-test-user
  INFISICAL_PASS=infisical_admin_password-VALUE
  INFISICAL_ENCRYPTION_KEY=infisical_encryption_key-VALUE
  INFISICAL_AUTH_SECRET='literal$DOLLAR'
  INFISICAL_DB_PASSWORD=infisical_db_password-VALUE
  PORTAINER_PASS=portainer_admin_password-VALUE
  KUMA_PASS=kuma_admin_password-VALUE
  GRAFANA_PASS=grafana_admin_password-VALUE
  DAGSTER_DB_PASS=dagster_db_password-VALUE
  KESTRA_PASS='has spaces and	rabs'
  KESTRA_DB_PASS=kestra_db_password-VALUE
  N8N_PASS=n8n_admin_password-VALUE
  METABASE_PASS=metabase_admin_password-VALUE
  SUPERSET_PASS=superset_admin_password-VALUE
  SUPERSET_DB_PASS=superset_db_password-VALUE
  SUPERSET_SECRET=superset_secret_key-VALUE
  CLOUDBEAVER_PASS=cloudbeaver_admin_password-VALUE
  MAGE_PASS=mage_admin_password-VALUE
  MINIO_ROOT_PASS=minio_root_password-VALUE
  SFTPGO_ADMIN_PASS=sftpgo_admin_password-VALUE
  SFTPGO_USER_PASS=sftpgo_user_password-VALUE
  HOPPSCOTCH_DB_PASS=hoppscotch_db_password-VALUE
  HOPPSCOTCH_JWT=hoppscotch_jwt_secret-VALUE
  HOPPSCOTCH_SESSION=hoppscotch_session_secret-VALUE
  HOPPSCOTCH_ENCRYPTION=hoppscotch_encryption_key-VALUE
  MELTANO_DB_PASS=meltano_db_password-VALUE
  SODA_DB_PASS=soda_db_password-VALUE
  REDPANDA_ADMIN_PASS='single'"'"'apos'
  POSTGRES_PASS=postgres_password-VALUE
  PG_DUCKLAKE_PASS=pgducklake_password-VALUE
  HETZNER_S3_BUCKET_PGDUCKLAKE=hetzner_s3_bucket_pgducklake-VALUE
  PGADMIN_PASS=pgadmin_password-VALUE
  PREFECT_DB_PASS=prefect_db_password-VALUE
  RUSTFS_ROOT_PASS=rustfs_root_password-VALUE
  SEAWEEDFS_ADMIN_PASS=seaweedfs_admin_password-VALUE
  GARAGE_ADMIN_TOKEN=garage_admin_token-VALUE
  GARAGE_RPC_SECRET=garage_rpc_secret-VALUE
  LAKEFS_DB_PASS=lakefs_db_password-VALUE
  LAKEFS_ENCRYPT_SECRET='back`tick`secret'
  LAKEFS_ADMIN_ACCESS_KEY=lakefs_admin_access_key-VALUE
  LAKEFS_ADMIN_SECRET_KEY=lakefs_admin_secret_key-VALUE
  HETZNER_S3_SERVER=hetzner_s3_server-VALUE
  HETZNER_S3_REGION=hetzner_s3_region-VALUE
  HETZNER_S3_ACCESS_KEY=hetzner_s3_access_key-VALUE
  HETZNER_S3_SECRET_KEY=hetzner_s3_secret_key-VALUE
  HETZNER_S3_BUCKET=hetzner_s3_bucket_lakefs-VALUE
  HETZNER_S3_BUCKET_GENERAL=hetzner_s3_bucket_general-VALUE
  EXTERNAL_S3_ENDPOINT=external_s3_endpoint-VALUE
  EXTERNAL_S3_REGION=external_s3_region-VALUE
  EXTERNAL_S3_ACCESS_KEY=external_s3_access_key-VALUE
  EXTERNAL_S3_SECRET_KEY=external_s3_secret_key-VALUE
  EXTERNAL_S3_BUCKET=external_s3_bucket-VALUE
  EXTERNAL_S3_LABEL=external_s3_label-VALUE
  R2_DATA_ENDPOINT=r2_data_endpoint-VALUE
  R2_DATA_ACCESS_KEY=r2_data_access_key-VALUE
  R2_DATA_SECRET_KEY=r2_data_secret_key-VALUE
  R2_DATA_BUCKET=r2_data_bucket-VALUE
  FILESTASH_ADMIN_PASSWORD=filestash_admin_password-VALUE
  WINDMILL_ADMIN_PASS=windmill_admin_password-VALUE
  WINDMILL_DB_PASS=windmill_db_password-VALUE
  WINDMILL_SUPERADMIN_SECRET=windmill_superadmin_secret-VALUE
  OPENMETADATA_ADMIN_PASS=openmetadata_admin_password-VALUE
  OPENMETADATA_DB_PASS=openmetadata_db_password-VALUE
  OPENMETADATA_AIRFLOW_PASS=openmetadata_airflow_password-VALUE
  OPENMETADATA_FERNET_KEY=openmetadata_fernet_key-VALUE
  GITEA_ADMIN_PASS='with"double"quotes'
  GITEA_USER_PASS=gitea_user_password-VALUE
  GITEA_DB_PASS=gitea_db_password-VALUE
  CLICKHOUSE_ADMIN_PASS=clickhouse_admin_password-VALUE
  WIKIJS_ADMIN_PASS=wikijs_admin_password-VALUE
  WIKIJS_DB_PASS=wikijs_db_password-VALUE
  WOODPECKER_AGENT_SECRET=woodpecker_agent_secret-VALUE
  NOCODB_ADMIN_PASS=nocodb_admin_password-VALUE
  NOCODB_DB_PASS=nocodb_db_password-VALUE
  NOCODB_JWT_SECRET=nocodb_jwt_secret-VALUE
  DINKY_ADMIN_PASS=dinky_admin_password-VALUE
  APPSMITH_ENCRYPTION_PASSWORD=appsmith_encryption_password-VALUE
  APPSMITH_ENCRYPTION_SALT=appsmith_encryption_salt-VALUE
  DIFY_ADMIN_PASS=dify_admin_password-VALUE
  DIFY_DB_PASS=dify_db_password-VALUE
  DIFY_REDIS_PASS=dify_redis_password-VALUE
  DIFY_SECRET_KEY=dify_secret_key-VALUE
  DIFY_WEAVIATE_API_KEY=dify_weaviate_api_key-VALUE
  DIFY_SANDBOX_API_KEY=dify_sandbox_api_key-VALUE
  DIFY_PLUGIN_DAEMON_KEY=dify_plugin_daemon_key-VALUE
  DIFY_PLUGIN_INNER_API_KEY=dify_plugin_inner_api_key-VALUE
  DOCKERHUB_USER=dockerhub_username-VALUE
  DOCKERHUB_TOKEN=dockerhub_token-VALUE
  
  '''
# ---
# name: test_dump_shell_minimal_snapshot
  '''
  ADMIN_USERNAME=nexus
  INFISICAL_PASS=minimal-infisical-pw
  INFISICAL_ENCRYPTION_KEY=''
  INFISICAL_AUTH_SECRET=''
  INFISICAL_DB_PASSWORD=''
  PORTAINER_PASS=''
  KUMA_PASS=''
  GRAFANA_PASS=''
  DAGSTER_DB_PASS=''
  KESTRA_PASS=minimal-kestra-pw
  KESTRA_DB_PASS=''
  N8N_PASS=''
  METABASE_PASS=''
  SUPERSET_PASS=''
  SUPERSET_DB_PASS=''
  SUPERSET_SECRET=''
  CLOUDBEAVER_PASS=''
  MAGE_PASS=''
  MINIO_ROOT_PASS=''
  SFTPGO_ADMIN_PASS=''
  SFTPGO_USER_PASS=''
  HOPPSCOTCH_DB_PASS=''
  HOPPSCOTCH_JWT=''
  HOPPSCOTCH_SESSION=''
  HOPPSCOTCH_ENCRYPTION=''
  MELTANO_DB_PASS=''
  SODA_DB_PASS=''
  REDPANDA_ADMIN_PASS=''
  POSTGRES_PASS=''
  PG_DUCKLAKE_PASS=''
  HETZNER_S3_BUCKET_PGDUCKLAKE=''
  PGADMIN_PASS=''
  PREFECT_DB_PASS=''
  RUSTFS_ROOT_PASS=''
  SEAWEEDFS_ADMIN_PASS=''
  GARAGE_ADMIN_TOKEN=''
  GARAGE_RPC_SECRET=''
  LAKEFS_DB_PASS=''
  LAKEFS_ENCRYPT_SECRET=''
  LAKEFS_ADMIN_ACCESS_KEY=''
  LAKEFS_ADMIN_SECRET_KEY=''
  HETZNER_S3_SERVER=''
  HETZNER_S3_REGION=''
  HETZNER_S3_ACCESS_KEY=''
  HETZNER_S3_SECRET_KEY=''
  HETZNER_S3_BUCKET=''
  HETZNER_S3_BUCKET_GENERAL=''
  EXTERNAL_S3_ENDPOINT=''
  EXTERNAL_S3_REGION=auto
  EXTERNAL_S3_ACCESS_KEY=''
  EXTERNAL_S3_SECRET_KEY=''
  EXTERNAL_S3_BUCKET=''
  EXTERNAL_S3_LABEL='External Storage'
  R2_DATA_ENDPOINT=''
  R2_DATA_ACCESS_KEY=''
  R2_DATA_SECRET_KEY=''
  R2_DATA_BUCKET=''
  FILESTASH_ADMIN_PASSWORD=''
  WINDMILL_ADMIN_PASS=''
  WINDMILL_DB_PASS=''
  WINDMILL_SUPERADMIN_SECRET=''
  OPENMETADATA_ADMIN_PASS=''
  OPENMETADATA_DB_PASS=''
  OPENMETADATA_AIRFLOW_PASS=''
  OPENMETADATA_FERNET_KEY=''
  GITEA_ADMIN_PASS=''
  GITEA_USER_PASS=''
  GITEA_DB_PASS=''
  CLICKHOUSE_ADMIN_PASS=''
  WIKIJS_ADMIN_PASS=''
  WIKIJS_DB_PASS=''
  WOODPECKER_AGENT_SECRET=''
  NOCODB_ADMIN_PASS=''
  NOCODB_DB_PASS=''
  NOCODB_JWT_SECRET=''
  DINKY_ADMIN_PASS=''
  APPSMITH_ENCRYPTION_PASSWORD=''
  APPSMITH_ENCRYPTION_SALT=''
  DIFY_ADMIN_PASS=''
  DIFY_DB_PASS=''
  DIFY_REDIS_PASS=''
  DIFY_SECRET_KEY=''
  DIFY_WEAVIATE_API_KEY=''
  DIFY_SANDBOX_API_KEY=''
  DIFY_PLUGIN_DAEMON_KEY=''
  DIFY_PLUGIN_INNER_API_KEY=''
  DOCKERHUB_USER=''
  DOCKERHUB_TOKEN=''
  
  '''
# ---
